# autopolio

./: .dockerignore  .env.example  .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile.api  LICENSE  README.md  README_ko.md  SECURITY.md  TODO-SECRETS.md  alembic.ini  docker-compose.local.yml  docker-compose.yml  package.json  pyproject.toml  start-dev.bat  start-dev.sh  start-test.bat  test_cli.py
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  WORKFLOWS.md  dependabot.yml  labeler.yml  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  docs.yml  feature_request.yml  question.yml
.github/workflows/: ai-review.yml  beta-release.yml  ci.yml  issue-auto-label.yml  lint.yml  pages.yml  pr-labeler.yml  prepare-release.yml  release-drafter.yml  release.yml  security.yml  stale.yml  test-azure-auth.yml  virustotal.yml  welcome.yml
.husky/: commit-msg  pre-commit
api/: README.md  config.py  database.py  main.py
api/alembic/: env.py
api/constants/: __init__.py  config.py  enums.py  tiers.py
api/dependencies/: tier_guards.py
api/middleware/: auth.py
api/migrations/: add_ai_tools_column.py  add_multi_repo.py
api/models/: __init__.py  achievement.py  company.py  contributor_analysis.py  credentials.py  document.py  job.py  oauth_identity.py  platform_template.py  project.py  project_repository.py  repo_analysis.py  repo_analysis_edits.py  template.py  usage_record.py  user.py
api/routers/: __init__.py  data_migration.py  documents.py  github.py  llm.py  llm_keys.py  lookup.py  oauth.py  pipeline.py  platforms.py  templates.py  users.py
api/schemas/: __init__.py  company.py  credentials.py  data_migration.py  document.py  github.py  job.py  llm.py  pipeline.py  platform.py  project.py  template.py  user.py
api/services/: achievement_service.py  analysis_job_service.py  attachment_service.py  cli_llm_service.py  cli_service.py  document_service.py  docx_generator.py  docx_styles.py  encryption_service.py  export_service.py  github_service.py  llm_service.py  lookup_service.py  oauth_service.py  pipeline_service.py  platform_logos.py  platform_template_service.py  profile_service.py  report_service.py  role_service.py  task_service.py  technology_detection_service.py  template_exporter.py  template_renderer.py  usage_service.py  user_data_collector.py
api/utils/: __init__.py  datetime_utils.py
config/: platform_field_mappings.yaml  platforms.yaml  runtime.yaml  settings.yaml  template_available_fields.json
config/certifications/: it_global.yaml  korean.yaml
data/platform_templates/: jumpit.html  remember.html  saramin.html  wanted.html
docs/: PIPELINE.md  ROADMAP.md  RUNTIME_TIER_AUTH.md  SESSION_REPORT_2026-03-05.md  index.html  ko.html
frontend/: .dockerignore  Dockerfile  README.md  electron-builder.json  index.html  nginx.conf  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  vite.config.ts
frontend/e2e/: analysis-fields.spec.ts  api-health.spec.ts  cli-all-auth.spec.ts  cli-auth-code.spec.ts  cli-login-oauth.spec.ts  cli-login-test.spec.ts  companies.spec.ts  comprehensive.spec.ts  credentials.spec.ts  dashboard.spec.ts  full-workflow.spec.ts  github.spec.ts  llm-settings-ui.spec.ts  navigation.spec.ts  platforms.spec.ts  projects.spec.ts  runtimeConfig.ts  settings.spec.ts  templates.spec.ts
frontend/electron/: backend-manager.js  backend-manager.ts  main.js  (+4 more)
scripts/: ai-pr-reviewer.md  bump-version.cjs  docker-entrypoint.sh
tests/: README.md  check_backend.py  scenario_test.py  seed_sample_data.py  test_parallel_llm.py  test_parallel_verify.py
(+413 files in other folders)
